app/globals.css
/* ... */
body.dark .player-wrapper .player-preview .big-play-icon svg {
  stroke: #606887;
  stroke: var(--accentColor);
}

body.dark .player-wrapper .player-overlay .controls-wrapper .controls-button {
  background-color: #f3f2f9;
  background-color: var(--accentColorDark);
}

body.dark
  .player-wrapper
  .player-overlay
  .controls-wrapper
  .controls-button
  svg {
  stroke: #606887;
  stroke: var(--accentColor);
}

body.dark
  .player-wrapper
  .player-overlay
  .controls-wrapper
  .controls-bar
  .slider::-webkit-slider-runnable-track {
  background-image: linear-gradient(
    90deg,
    #f3f2f9 var(--value, 0),
    transparent var(--value, 0)
  );
  background-image: linear-gradient(
    90deg,
    var(--accentColorDark) var(--value, 0),
    transparent var(--value, 0)
  );
}

.contact-content {
  margin-top: var(--top-internal-margin);
  display: flex;
  flex-direction: row;
}

@media (max-width: 61.99em) {
  .contact-content {
    flex-direction: column;
  }
}

.contact-content .contact-left,
.contact-content .contact-right {
  width: 50%;
}

@media (max-width: 61.99em) {
  .contact-content .contact-left,
  .contact-content .contact-right {
    width: 100%;
  }
}

.about-left .about-contact {
  margin-top: var(--top-internal-margin);
  width: 100%;
}

.about-left .about-contact .contact-content .contact-left table,
.about-left .about-contact .contact-content .contact-right table {
  width: 100%;
}

@media (max-width: 47.99em) {
  .contact-content table tbody tr {
    display: grid;
    grid-template-columns: 1fr;
    row-gap: 0.75rem;
    justify-items: center;
  }

  .contact-content table td {
    display: block;
    width: 100%;
    text-align: center;
  }

  .contact-content .link-wrapper {
    margin-inline: auto;
  }

  .contact-content .contact-right table td ul {
    display: grid;
    gap: 0.5rem;
    padding: 0;
    margin: 0;
    justify-items: center;
  }

  .contact-content .contact-right table td li {
    list-style: none;
  }

  .about-left .about-contact .page-head {
    align-items: center;
  }

  .about-left .about-contact .page-head .page-title {
    text-align: center;
  }
}

@media (max-width: 47.99em) {
  .about .page-head .page-title {
    text-align: center;
  }
}
footer {
  padding: 0 var(--left-right-margin) 0;
  width: 100%;
}

footer hr {
  margin-top: var(--top-margin);
}

footer .footer-wrapper {
  padding: var(--top-internal-margin) 0 var(--top-internal-margin);
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  align-items: center;
}

footer .footer-wrapper .footer-right {
  text-align: right;
}

.home {
  width: 100%;
  height: inherit;
  justify-content: space-around;
  opacity: 1;
  transition: opacity 0.4s ease;
}

.home,
.home .intro-wrapper {
  position: relative;
  display: flex;
  flex-direction: column;
}

.home .intro-wrapper {
  height: calc(var(--innerVh, 1vh) * 100);
  justify-content: center;
  margin: 0 var(--left-right-margin);
  display: flex;
  flex-direction: column;
  align-items: center;
}

@media (max-width: 47.99em) {
  .home .intro-wrapper {
    position: fixed;
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
    margin: 0;
    padding: 0 var(--left-right-margin);
    height: 100%;
    width: 100%;
    z-index: 10;
  }
}

@media (max-width: 47.99em) {
  .home .intro-wrapper {
    font-size: 1.5rem;
  }
}

.home .intro-wrapper .intro-text {
  position: relative;
  text-align: center;
  overflow: visible;
}

@media (max-width: 47.99em) {
  .home .intro-wrapper .intro-text {
    text-align: center;
  }
}

@media (max-width: 61.99em) {
  .home .intro-wrapper .intro-text > * {
    backface-visibility: hidden;
    transform: translateZ(0);
  }
}

.home .intro-wrapper .intro-text .intro-id {
  color: transparent;
  font-family: studiofeixen, Arial, Helvetica, sans-serif;
  letter-spacing: 0.05rem;
  font-weight: 800;
  line-height: 1.08;
  padding-block: 0.06em;
  -webkit-text-stroke: 2px #606887;
  font-variation-settings:
    "wght" 800,
    "wdth" 100;
}

@media (max-width: 61.99em) {
  .home .intro-wrapper .intro-text .intro-id {
    -webkit-text-stroke: 1.25px #606887;
  }
}
.name {
  padding-left: 10px;
}

.home .intro-wrapper .intro-text .name {
  position: relative;
  white-space: nowrap;
  cursor: pointer;
  display: inline-block;
  font-family:
    studiofeixen-variable, studiofeixen, Arial, Helvetica, sans-serif;
  font-weight: 400;
  font-variation-settings:
    "wght" 800,
    "wdth" 125;
  letter-spacing: normal;
  color: #606887;
  -webkit-text-stroke: 0;
}

.home .intro-wrapper .intro-text .wave-wrapper {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  z-index: -1;
}

.home .intro-wrapper .intro-text .wave-wrapper .wave {
  position: absolute;
  background-image: url(/wave-light.svg);
  background-repeat: repeat-x;
  background-position-x: 0;
  background-position-y: 0;
  bottom: 0;
  opacity: 0.5;
  width: 100%;
  height: 50%;
}

.home .intro-wrapper .intro-text .intro-roles .intro-role {
  font-variation-settings:
    "wght" 500,
    "wdth" 100;
}

.home .intro-wrapper .intro-text .intro-links {
  margin-top: var(--top-internal-margin);
}

.home .intro-wrapper .intro-text .intro-links li {
  display: inline-flex;
  margin-left: var(--left-right-internal-margin);
}

@media (max-width: 47.99em) {
  .home .intro-wrapper .intro-text .intro-links li {
    margin: 0 var(--left-right-internal-margin);
  }
}

body.dark .home .intro-wrapper .intro-text {
  width: auto;
}

body.dark .home .intro-wrapper .intro-text .intro-id {
  -webkit-text-stroke: 2px #aab2d1;
}

@media (max-width: 61.99em) {
  body.dark .home .intro-wrapper .intro-text .intro-id {
    -webkit-text-stroke: 1.25px #aab2d1;
  }
}

body.dark .home .intro-wrapper .intro-text .intro-id .name {
  color: #aab2d1;
}

body.dark .home .intro-wrapper .intro-text .intro-id .wave-wrapper .wave {
  background-image: url(/wave.svg);
}

body[data-menu-open="true"] .home {
  opacity: 0;
  pointer-events: none;
}
/* ... */

